--- a/app/src/main/res/layout/dialog_profile_password.xml
+++ b/app/src/main/res/layout/dialog_profile_password.xml
@@ -1,26 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/dialog_profile_password_title"
+        style="@style/Base.TextAppearance.AppCompat.Medium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Votre nouveau secret"
+        android:background="@color/colorPrimary"
+        android:fontFamily="sans-serif-medium"
         android:gravity="center"
-        android:background="#029987"
+        android:text="Nouveau mot de passe"
         android:textColor="#ffffff"
-        style="@style/Base.TextAppearance.AppCompat.Medium"/>
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/dialog_profile_password"
-        android:inputType="textPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="4dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-        android:layout_marginBottom="4dp" />
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:inputType="textPassword" />
 
 </LinearLayout>
