--- a/app/src/main/res/layout/dialog_profile_picture.xml
+++ b/app/src/main/res/layout/dialog_profile_picture.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
-    android:id="@+id/dialog_profile_image_pick"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="Changement de photo de profil"
-    style="@style/Base.TextAppearance.AppCompat.Medium"
-        android:gravity="center"/>
-
+        android:id="@+id/dialog_profile_image_pick"
+        style="@style/Base.TextAppearance.AppCompat.Medium"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:fontFamily="sans-serif-medium"
+        android:gravity="center"
+        android:text="Importer depuis"
+        android:textColor="#ffffff"
+        android:textSize="20sp" />
 
 </LinearLayout>
