--- a/app/src/main/res/layout/dialog_profile_username.xml
+++ b/app/src/main/res/layout/dialog_profile_username.xml
@@ -9,9 +9,12 @@
         android:layout_height="wrap_content"
         android:text="Votre nouvelle identité"
         android:gravity="center"
-        android:background="#029987"
+        android:background="@color/colorPrimary"
         android:textColor="#ffffff"
-        style="@style/Base.TextAppearance.AppCompat.Medium"/>
+        style="@style/Base.TextAppearance.AppCompat.Medium"
+        android:fontFamily="sans-serif-medium"
+        android:textSize="20sp"
+        />
 
     <EditText
         android:id="@+id/dialog_profile_username"
@@ -21,6 +24,8 @@
         android:layout_marginTop="16dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-        android:layout_marginBottom="4dp" />
+        android:layout_marginBottom="4dp"
+        android:gravity="center"
+        android:hint="ie: Jean-Pleb"/>
 
 </LinearLayout>
