Loader added in search and contacts

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -33,6 +33,12 @@
         android:textAllCaps="false"
         android:text="Chercher l'id WePleb de : "/>
 
+    <ProgressBar
+        android:id="@+id/activity_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_contacts_list"
         android:scrollbars="vertical"
