--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -1,13 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_width="fill_parent"
+    android:layout_height="100dp"
+    android:padding="10dp"
+    android:orientation="horizontal"
+    android:gravity="center_vertical">
 
-    <TextView
-        android:id="@+id/item_contact_username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/black"/>
+    <ImageView
+        android:id="@+id/item_contact_profile_picture"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:background="@color/com_facebook_button_background_color"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp">
+
+        <TextView
+            android:id="@+id/item_contact_username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textStyle="normal"
+            android:fontFamily="sans-serif-medium"
+            android:textSize="20sp"/>
+        <TextView
+            android:id="@+id/item_contact_mood"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/item_contact_username"
+            android:layout_below="@+id/item_contact_username"
+            android:textStyle="italic"
+            android:fontFamily="sans-serif"
+            android:textSize="15sp"
+            android:text="I am a Super Pleb"/>
+    </RelativeLayout>
+
 
 </LinearLayout>
