--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,14 +6,29 @@
     android:orientation="vertical"
     android:padding="20dp">
 
-    <ImageView
-        android:id="@+id/fragment_profile_picture"
-        android:layout_width="200dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:background="#ffffff"
-        android:scaleType="centerCrop" />
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/fragment_profile_picture"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:background="#ffffff"
+            android:scaleType="centerCrop" />
+
+        <ImageView
+            android:id="@+id/fragment_profile_qrcode"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_margin="60dp"
+            android:gravity="center_horizontal"
+            android:layout_gravity="center"
+            android:src="@drawable/qrcode_user"/>
+
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/fragment_profile_username"
@@ -48,13 +63,6 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1" />
-
-    <ImageView
-        android:id="@+id/fragment_profile_qrcode"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_gravity="center"
-        android:background="@android:color/holo_red_dark"/>
 
     <TextView
         android:id="@+id/fragment_profile_disconnect"
