--- a/app/src/main/res/drawable/tab_selector.xml
+++ b/app/src/main/res/drawable/tab_selector.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
         <shape>
-            <solid android:color="#ff5960" />
+            <solid android:color="#e74c3c" />
         </shape>
     </item>
     <item>
