--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorPrimary">#e74c3c</color>
     <color name="colorPrimaryDark">#c0392b</color>
     <color name="colorAccent">#2c3e50</color>
+    <color name="white">#FFFFFF</color>
 
 </resources>
