--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,54 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/activity_search_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#e74c3c">
+        android:background="#e74c3c" >
 
         <ImageButton
-            android:layout_width="20dp"
-            android:layout_height="20dp"
             android:id="@+id/search_back"
+            android:layout_width="40dp"
+            android:layout_height="45dp"
             android:background="@drawable/icon_back"
-            />
-        <View
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="20dp"
-            android:layout_width="1dp"
-            android:layout_height="50dp"
-            android:background="@color/white" />
+            android:layout_marginRight="15dp"/>
+
+
         <EditText
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
             android:id="@+id/search_bar"
-            android:textColor="@color/white"
-            android:singleLine="true" />
-        </android.support.v7.widget.Toolbar>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:singleLine="true"
+            android:textColor="@color/white" />
+    </android.support.v7.widget.Toolbar>
+
     <Button
+        android:id="@+id/add_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/add_button"
+        android:text="chercher le contact : "
         android:textAllCaps="false"
-        android:textColor="@color/colorPrimary"
-        android:text="chercher le contact : "/>
+        android:textColor="@color/colorPrimary" />
 
     <FrameLayout
         android:id="@+id/activity_progress_bar"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center" />
 
     </FrameLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_contacts_list"
-        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:scrollbars="vertical" />
 </LinearLayout>
