--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -15,15 +15,19 @@
             android:id="@+id/fragment_profile_picture"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:background="#ffffff"
-            android:scaleType="centerCrop" />
-
+            android:background="#000000"
+            android:scaleType="centerCrop"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0.9" />
+        <View
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"/>
         <ImageView
             android:id="@+id/fragment_profile_qrcode"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="10dp"
+            android:layout_gravity="center|right"
+            android:layout_weight="0.1"
             android:src="@drawable/qrcode_user"/>
 
     </LinearLayout>
@@ -39,6 +43,7 @@
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
         android:textSize="30sp"
+        android:layout_marginTop="30dp"
         tools:text="plebasdz" />
 
     <View
