--- a/app/src/main/res/drawable/tab_selector.xml
+++ b/app/src/main/res/drawable/tab_selector.xml
@@ -2,12 +2,12 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
         <shape>
-            <solid android:color="#e74c3c" />
+            <solid android:color="@color/colorPrimary" />
         </shape>
     </item>
     <item>
         <shape>
-            <solid android:color="#ffffff" />
+            <solid android:color="@color/colorAccent" />
         </shape>
     </item>
 </selector>
