--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -10,7 +10,7 @@
         android:id="@+id/activity_main_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#e74c3c"
+        android:background="@color/colorPrimary"
         app:titleTextColor="#ffffff" />
 
     <FrameLayout
@@ -18,11 +18,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#666666" />
 
     <RadioGroup
         android:layout_width="match_parent"
@@ -39,12 +34,9 @@
             android:button="@null"
             android:gravity="center"
             android:padding="12dp"
-            android:text="Messages" />
+            android:text="Messages"
+            android:textColor="@color/white" />
 
-        <View
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:background="#666666" />
 
         <RadioButton
             android:id="@+id/activity_main_tab_contacts"
@@ -56,12 +48,10 @@
             android:button="@null"
             android:gravity="center"
             android:padding="12dp"
-            android:text="Contacts" />
+            android:text="Contacts"
+            android:textColor="@color/white" />
 
-        <View
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:background="#666666" />
+
 
         <RadioButton
             android:id="@+id/activity_main_tab_profile"
@@ -73,7 +63,8 @@
             android:button="@null"
             android:gravity="center"
             android:padding="12dp"
-            android:text="Profil" />
+            android:text="Profil"
+            android:textColor="@color/white" />
 
     </RadioGroup>
 
