--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -21,16 +21,12 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
-        android:alpha="0.75"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
+        android:textColor="@color/grey"
         android:textSize="30sp"
-        tools:text="plebasdz" />
-
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+        tools:text="plebasdz"
+        android:layout_marginTop="30dp"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
