--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -39,7 +39,7 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
-        android:alpha="0.75"
+        android:textColor="@color/grey"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
         android:textSize="30sp"
