--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -24,8 +24,7 @@
             android:layout_height="wrap_content"
             android:textStyle="normal"
             android:fontFamily="sans-serif-medium"
-            android:textColor="@android:color/black"
-            android:alpha="0.75"
+            android:textColor="@color/grey"
             android:textSize="20sp"/>
         <TextView
             android:id="@+id/item_contact_mood"
@@ -34,8 +33,7 @@
             android:layout_alignStart="@+id/item_contact_username"
             android:layout_below="@+id/item_contact_username"
             android:textStyle="italic"
-            android:textColor="@android:color/black"
-            android:alpha="0.75"
+            android:textColor="@color/grey"
             android:fontFamily="sans-serif"
             android:textSize="15sp"
             android:text="I am a Super Pleb"/>
