--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#c0392b</color>
     <color name="colorAccent">#2c3e50</color>
     <color name="white">#FFFFFF</color>
+    <color name="grey">#464646</color>
 
 </resources>
