--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,7 +63,7 @@
             android:button="@null"
             android:gravity="center"
             android:padding="12dp"
-            android:text="Profil"
+            android:text="Profile"
             android:textColor="@color/white" />
 
     </RadioGroup>
