--- a/app/src/main/res/drawable/tab_selector.xml
+++ b/app/src/main/res/drawable/tab_selector.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
-        <shape>
-            <solid android:color="@color/colorPrimary" />
-        </shape>
+        <inset xmlns:android="http://schemas.android.com/apk/res/android"
+            android:insetLeft="-10dp"
+            android:insetRight="-10dp"
+            android:insetTop="-10dp"
+            android:insetBottom="-5dp">
+            <shape android:shape="rectangle">
+                <stroke android:width="10dp" android:color="@color/colorPrimary"/>
+                <solid android:color="#1c2b39"/>
+            </shape>
+        </inset>
     </item>
     <item>
         <shape>
