Welcome, Login, Signup design globale Hide button after friend request New color App

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -37,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:background="#e74c3c"
+            android:background="@color/colorPrimary"
             android:gravity="center"
             android:text="messages"
             android:textAllCaps="false"
@@ -51,7 +51,7 @@
             android:layout_height="50dp"
             android:layout_below="@+id/activity_profile_messages"
             android:layout_gravity="center"
-            android:background="#e74c3c"
+            android:background="@color/colorPrimary"
             android:gravity="center"
             android:text="ajouter contact"
             android:textAllCaps="false"
