--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -56,7 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:background="#e74c3c"
+        android:background="@color/colorPrimary"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
         android:text="changer de mot de passe"
@@ -73,7 +73,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:background="#2c3e50"
+        android:background="@color/colorPrimaryDark"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
         android:text="déconnecter"
