--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#e74c3c</color>
-    <color name="colorPrimaryDark">#c0392b</color>
-    <color name="colorAccent">#2c3e50</color>
+    <color name="colorPrimary">#6340a5</color>
+    <color name="colorPrimaryDark">#322153</color>
+    <color name="colorAccent">#191920</color>
     <color name="white">#FFFFFF</color>
     <color name="grey">#464646</color>
 
