--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,8 @@
         android:id="@+id/activity_login_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Nom d'utilisateur" />
+        android:hint="Nom d'utilisateur"
+        android:gravity="center"/>
 
     <EditText
         android:id="@+id/activity_login_password"
@@ -18,13 +19,21 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:hint="Mot de passe"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:gravity="center"/>
 
     <Button
         android:id="@+id/activity_login_button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="SE CONNECTER" />
+        android:layout_height="50dp"
+        android:layout_below="@+id/activity_profile_messages"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:text="Se connecter"
+        android:textAllCaps="false"
+        android:textColor="#ffffff"
+        android:textSize="20sp"  />
 
 </LinearLayout>
