--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -10,7 +10,8 @@
         android:id="@+id/activity_signup_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Nom d'utilisateur" />
+        android:hint="Nom d'utilisateur"
+        android:gravity="center"/>
 
     <EditText
         android:id="@+id/activity_signup_password"
@@ -18,7 +19,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:hint="Mot de passe"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:gravity="center"/>
 
     <EditText
         android:id="@+id/activity_signup_password_confirm"
@@ -26,13 +28,21 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:hint="Confirmer le mot de passe"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:gravity="center"/>
 
     <Button
         android:id="@+id/activity_signup_button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="S'INSCRIRE" />
+        android:layout_height="50dp"
+        android:layout_below="@+id/activity_profile_messages"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:text="S'inscrire"
+        android:textAllCaps="false"
+        android:textColor="#ffffff"
+        android:textSize="20sp"  />
 
 </LinearLayout>
