--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,20 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="25dp"
-    android:gravity="center">
+    android:orientation="vertical"
+    android:padding="25dp">
+
+    <ImageView
+        android:id="@+id/activity_welcome_logo"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/logo" />
+
+
+    <TextView
+        style="@style/Base.TextAppearance.AppCompat.Large"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:text="weplebnow"
+        android:letterSpacing="0.80"
+        android:textStyle="italic"
+        android:textColor="@color/grey"
+        android:alpha="0.80"/>
 
     <Button
         android:id="@+id/activity_welcome_login"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="SE CONNECTER"/>
+        android:layout_height="50dp"
+        android:layout_below="@+id/activity_profile_messages"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:text="Se connecter"
+        android:textAllCaps="false"
+        android:textColor="#ffffff"
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/activity_welcome_signup"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="S'INSCRIRE"/>
+        android:layout_height="50dp"
+        android:layout_below="@+id/activity_profile_messages"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:text="S'inscrire"
+        android:textAllCaps="false"
+        android:textColor="#ffffff"
+        android:textSize="20sp" />
 
 </LinearLayout>
