--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_chat"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,6 +11,7 @@
         android:id="@+id/activity_chat_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:titleTextColor="@color/white"
         android:background="@color/colorPrimary" />
 
     <android.support.v7.widget.RecyclerView
@@ -46,6 +48,7 @@
             android:layout_weight="1"
             android:background="@drawable/rounded_white"
             android:hint="Tapez votre texte"
+            android:inputType="textMultiLine"
             android:maxHeight="80sp"
             android:paddingBottom="5dp"
             android:paddingLeft="8dp"
