--- a/app/src/main/res/drawable/rounded_grey.xml
+++ b/app/src/main/res/drawable/rounded_grey.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/colorAccent" />
+    <solid android:color="@color/grey" />
 
     <stroke
         android:width="1dp"
-        android:color="@color/colorAccent" />
+        android:color="@color/grey" />
 
     <corners android:radius="16dp" />
 
