--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -2,41 +2,45 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="100dp"
-    android:padding="10dp"
+    android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:gravity="center_vertical">
+    android:padding="10dp">
 
     <ImageView
         android:id="@+id/item_contact_profile_picture"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:background="@color/com_facebook_button_background_color"/>
+        android:background="@color/com_facebook_button_background_color" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp">
+        android:gravity="center_vertical"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp">
 
         <TextView
             android:id="@+id/item_contact_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textStyle="normal"
             android:fontFamily="sans-serif-medium"
             android:textColor="@color/grey"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:textStyle="normal" />
+
         <TextView
             android:id="@+id/item_contact_mood"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignStart="@+id/item_contact_username"
             android:layout_below="@+id/item_contact_username"
-            android:textStyle="italic"
-            android:textColor="@color/grey"
+            android:ellipsize="end"
             android:fontFamily="sans-serif"
+            android:maxLines="2"
+            android:text="I am a Super Pleb"
+            android:textColor="@color/grey"
             android:textSize="15sp"
-            android:text="I am a Super Pleb"/>
+            android:textStyle="italic" />
     </RelativeLayout>
 
 
