--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -11,6 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Nom d'utilisateur"
+        android:maxLength="16"
+        android:lines="1"
         android:gravity="center"/>
 
     <EditText
@@ -18,7 +20,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:lines="1"
         android:hint="Mot de passe"
+        android:maxLength="16"
         android:inputType="textPassword"
         android:gravity="center"/>
 
@@ -27,6 +31,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:lines="1"
+        android:maxLength="16"
         android:hint="Confirmer le mot de passe"
         android:inputType="textPassword"
         android:gravity="center"/>
