--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -22,7 +22,7 @@
             android:id="@+id/search_bar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:singleLine="true"
+            android:lines="1"
             android:textColor="@color/white" />
     </android.support.v7.widget.Toolbar>
 
