--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -6,11 +6,14 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/item_message_user_left"
         android:layout_width="42dp"
         android:layout_height="42dp"
-        android:layout_marginLeft="10dp" />
+        android:layout_marginLeft="10dp"
+        app:civ_border_width="2dp"
+        app:civ_border_color="#FF000000"/>
 
     <TextView
         android:id="@+id/item_message_text"
@@ -30,10 +33,14 @@
         android:textSize="14sp"
         tools:text="Message" />
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/item_message_user_right"
         android:layout_width="42dp"
         android:layout_height="42dp"
-        android:layout_marginRight="10dp" />
+        android:layout_marginRight="10dp"
+        app:civ_border_width="2dp"
+        app:civ_border_color="#FF000000"/>
+
 
 </LinearLayout>
