--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,14 +6,23 @@
     android:orientation="vertical"
     android:padding="20dp">
 
-    <ImageView
+    <!--<ImageView-->
+        <!--android:id="@+id/activity_profile_picture"-->
+        <!--android:layout_width="200dp"-->
+        <!--android:layout_height="200dp"-->
+        <!--android:layout_gravity="center_horizontal"-->
+        <!--android:layout_marginTop="20dp"-->
+        <!--android:background="#ffffff"-->
+        <!--android:scaleType="centerCrop" />-->
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/activity_profile_picture"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
-        android:background="#ffffff"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        app:civ_border_color="#FFFFFF"/>
 
     <TextView
         android:id="@+id/activity_profile_username"
