--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -12,7 +12,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         app:civ_border_width="2dp"
-        app:civ_border_color="#FF000000"/>
+        app:civ_border_color="#6340a5"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
