--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -13,7 +13,7 @@
         android:layout_height="42dp"
         android:layout_marginLeft="10dp"
         app:civ_border_width="2dp"
-        app:civ_border_color="#FF000000"/>
+        app:civ_border_color="#6340a5"/>
 
     <TextView
         android:id="@+id/item_message_text"
@@ -40,7 +40,7 @@
         android:layout_height="42dp"
         android:layout_marginRight="10dp"
         app:civ_border_width="2dp"
-        app:civ_border_color="#FF000000"/>
+        app:civ_border_color="#6340a5"/>
 
 
 </LinearLayout>
