--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="20dp"
@@ -48,7 +47,8 @@
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
+            android:layout_marginBottom="-35dp"
+            android:layout_marginTop="40dp"
             android:fontFamily="sans-serif-medium"
             android:gravity="center"
             android:textColor="@color/grey"
@@ -78,7 +78,8 @@
             android:layout_marginRight="4dp"
             android:layout_marginTop="16dp"
             android:gravity="center"
-            android:inputType="text" />
+            android:inputType="text"
+            android:lines="1" />
 
         <TextView
             android:id="@+id/fragment_profile_password"
@@ -97,14 +98,14 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:layout_marginTop="50dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="30dp"
             android:background="@color/colorPrimaryDark"
             android:fontFamily="sans-serif-medium"
             android:gravity="center"
             android:text="déconnecter"
             android:textColor="#ffffff"
-            android:textSize="20sp"
-            android:layout_marginBottom="20dp"/>
+            android:textSize="20sp" />
 
     </LinearLayout>
 </ScrollView>
