--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -2,14 +2,16 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="20dp"
-    android:paddingRight="20dp"
+
     android:scrollbars="none">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="10dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -47,13 +49,13 @@
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="-35dp"
+            android:layout_marginBottom="-25dp"
             android:layout_marginTop="40dp"
             android:fontFamily="sans-serif-medium"
             android:gravity="center"
             android:textColor="@color/grey"
             android:textSize="30sp"
-            tools:text="plebasdz" />
+            android:text="wadawd"/>
 
         <TextView
             android:id="@+id/fragment_profile_mood_tittle"
@@ -67,7 +69,7 @@
             android:textColor="@color/grey"
             android:textSize="20sp"
             android:textStyle="italic"
-            tools:text="statut" />
+            android:text="Statut"/>
 
         <EditText
             android:id="@+id/fragment_profile_mood"
@@ -79,6 +81,7 @@
             android:layout_marginTop="16dp"
             android:gravity="center"
             android:inputType="text"
+            android:textColor="@color/grey"
             android:lines="1" />
 
         <TextView
